--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@ media
 # Backup files # 
 *.bak 
 
-# If you are using PyCharm # 
-# User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -99,7 +97,7 @@ celerybeat-schedule.*
 
 # Environments 
 .env 
-.venv 
+# .venv 
 env/ 
 venv/ 
 ENV/ 
